--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@types/is": "^0.0.21",
     "autoprefixer": "^10.4.2",
     "nuxt3": "latest",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18",
-    "sass": "^1.49.7",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.5",
-    "@types/is": "^0.0.21"
+    "sass": "^1.49.7",
+    "tailwindcss": "^3.0.18"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -22,6 +22,8 @@
     "@pinia/nuxt": "^0.1.8",
     "color": "^4.2.0",
     "is_js": "^0.9.0",
-    "pinia": "^2.0.11"
+    "pinia": "^2.0.11",
+    "vue-phone-number-input": "^1.1.12",
+    "vue-tel-input": "^6.0.0-beta.6"
   }
 }
