--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "pinia": "^2.0.11",
     "vue-phone-number-input": "^1.1.12",
     "vue-tel-input": "^6.0.0-beta.6"
+  },
+  "resolutions": {
+    "resolve": "1.20.0"
   }
 }
