--- a/package.json
+++ b/package.json
@@ -16,12 +16,23 @@
     "tailwindcss": "^3.0.18"
   },
   "dependencies": {
+    "@aktasumut34/vue-multiselect": "^3.0.0-alpha.2",
+    "@chenfengyuan/vue-number-input": "2",
+    "@headlessui/vue": "^1.4.3",
+    "@kyvg/vue3-notification": "^2.3.4",
     "@pinia/nuxt": "^0.1.8",
+    "click-outside-vue3": "^4.0.1",
     "color": "^4.2.0",
+    "disable-scroll": "^0.6.0",
     "is_js": "^0.9.0",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.11",
+    "sass-loader": "^12.6.0",
+    "vue-debounce": "^3.0.2",
+    "vue-easy-lightbox": "^1.3.0",
     "vue-phone-number-input": "^1.1.12",
-    "vue-tel-input": "^6.0.0-beta.6"
+    "vue-tel-input": "^6.0.0-beta.6",
+    "vue3-carousel": "^0.1.36"
   },
   "resolutions": {
     "resolve": "1.20.0"
