--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "is_js": "^0.9.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.11",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.12.0",
     "sass-loader": "^12.6.0",
     "sweetalert2": "^11.4.2",
     "vue-debounce": "^3.0.2",
     "vue-easy-lightbox": "^1.3.0",
     "vue-tel-input": "^6.0.0-beta.6",
-    "vue3-carousel": "^0.1.36"
+    "vue3-carousel": "^0.1.36",
+    "vue3-print-nb": "^0.1.4"
   }
 }
